--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="about">
                 <h1 class="about-name">Valentyna Sira</h1>
                 <h2 class="about-position">Junior frontend developer</h2>
-                <p class="about-description"> To achieve a goal, you must first of all go to it. 
+                <p class="about-description"> Front-end developer with strong analytical thinking. Highly responsible, punctual, and goal- oriented person, always ready to learn and gain new experiences. 
                 </p> 
             </div>
             <!--Projects-->
@@ -31,13 +31,37 @@
                 <ol class="projects-list">
                      <li class="projects-item">
                         <span class="project">
-                            <a href="https://helpful-cuchufli-9e5357.netlify.app//" class="project-link">https://helpful-cuchufli-9e5357.netlify.app//</a>
-                            .............
-                            <span class="project-bracket">[</span> HTML5, CSS3 <span class="project-bracket">]</span>
+                            <a href="https://valentynasira1.github.io/goit-markup-hw-09/" class="project-link">WebStudio</a>,
+                            <a href="https://github.com/ValentynaSira1/goit-markup-hw-09" class="project-link">GitHub-repository</a>
+                            <span class="work-list-item">[</span> HTML5, CSS3 <span class="work-list-item">]</span>
+                            <br/>
+                            <span class="work-list-item">A website of WebStudio company. Responsive design, transform effects, modal windows.</span>
+                            <br/>
+                            <span class="work-list-item">Role: developer</span>
                         </span>
-                        
+                     </li>
+                     <li class="projects-item">
+                        <span class="project">
+                            <a href="https://boroda-dmitro.github.io/js_ny-times-news/" class="project-link">News</a>,
+                            <a href="https://github.com/Boroda-Dmitro/js_ny-times-news" class="project-link">GitHub-repository</a>
+                            <span class="work-list-item">[</span> HTML5, CSS3, SASS, JS <span class="work-list-item">]</span>
+                            <br/>
+                            <span class="work-list-item">A website of WebStudio company. Responsive calendar.</span>
+                            <br/>
+                            <span class="work-list-item">Role: developer</span>
+                        </span>
+                     </li>    
+                     <li class="projects-item">
+                        <span class="project">
+                            <a href="https://andrewkustov1998.github.io/mimino/" class="project-link">Mimiho</a>,
+                            <a href="https://github.com/AndrewKustov1998/mimino" class="project-link">GitHub-repository</a>
+                            <span class="work-list-item">[</span> HTML5, CSS3, SASS <span class="work-list-item">]</span>
+                            <br/>
+                            <span class="work-list-item">A website of WebStudio company.  Responsive design, transform effects.</span>
+                            <br/>
+                            <span class="work-list-item">Role: developer</span>
+                        </span>
                     </li>
-                    
                 </ol>
             </div>
             <!--Work-->
@@ -112,19 +136,24 @@
                     </p>  
                     <p>
                         <a href="https://github.com/ValentynaSira1" class="contact-link">GitHub</a>
-                    </p>         
+                    </p>
+                    <p class="contact-link"> Chernihiv, Ukraine</p>         
                 </div>
             </div>
             <!--Tech skills-->
             <div class="tech-skills">
                 <h3 class="sidebar-title">Languages</h3>
                 <ul class="tech-skills-list">
-                    <li class="tech-skills-item"> <span class="tech-skills-text">Ukrainian</span></li>
-                    <li class="tech-skills-item"> <span class="tech-skills-text">German</span></li>
-                    <li class="tech-skills-item"> <span class="tech-skills-text">English</span></li>
-                    <li class="tech-skills-item"> <span class="tech-skills-text">Russian</span></li>
+                    <li class="tech-skills-item"> <span class="tech-skills-text">HTML5, SCC3, SASS</span></li>
+                    <li class="tech-skills-item"> <span class="tech-skills-text">JavaScript</span></li>
+                    <li class="tech-skills-item"> <span class="tech-skills-text">Node.js</span></li>
+                    <li class="tech-skills-item"> <span class="tech-skills-text">GIT</span></li>
+                    <li class="tech-skills-item"> <span class="tech-skills-text">React</span></li>
+                    <li class="tech-skills-item"> <span class="tech-skills-text">Redux</span></li>
+                    <li class="tech-skills-item"> <span class="tech-skills-text">REST API</span></li>
+                    <li class="tech-skills-item"> <span class="tech-skills-text">Parcel</span></li>
                 </ul>
-             </div>
+             </div> 
             <!--Soft skills-->
             <div class="soft-skills"> 
                 <h3 class="sidebar-title">Soft Skills</h3>
@@ -135,6 +164,16 @@
                     <li class="soft-skills-item"> <span class="soft-skills-text">Eager to learn</span></li>
                 </ul>
             </div>
+            <!-- Languages -->
+            <div class="tech-skills">
+                <h3 class="sidebar-title">Languages</h3>
+                <ul class="tech-skills-list">
+                    <li class="tech-skills-item"> <span class="tech-skills-text">Ukrainian</span></li>
+                    <li class="tech-skills-item"> <span class="tech-skills-text">German</span></li>
+                    <li class="tech-skills-item"> <span class="tech-skills-text">English</span></li>
+                    <li class="tech-skills-item"> <span class="tech-skills-text">Russian</span></li>
+                </ul>
+             </div>
         </aside>         
     </div>
 </body>
