--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <a href="https://github.com/Boroda-Dmitro/js_ny-times-news" class="project-link">GitHub-repository</a>
                             <span class="work-list-item">[</span> HTML5, CSS3, SASS, JS <span class="work-list-item">]</span>
                             <br/>
-                            <span class="work-list-item">A website of WebStudio company. Responsive calendar.</span>
+                            <span class="work-list-item">A website of News. Responsive calendar.</span>
                             <br/>
                             <span class="work-list-item">Role: developer</span>
                         </span>
@@ -57,7 +57,7 @@
                             <a href="https://github.com/AndrewKustov1998/mimino" class="project-link">GitHub-repository</a>
                             <span class="work-list-item">[</span> HTML5, CSS3, SASS <span class="work-list-item">]</span>
                             <br/>
-                            <span class="work-list-item">A website of WebStudio company.  Responsive design, transform effects.</span>
+                            <span class="work-list-item">A website of Mimiho company.  Responsive marking, design, transform effects on one section, code review.</span>
                             <br/>
                             <span class="work-list-item">Role: developer</span>
                         </span>
@@ -74,8 +74,6 @@
                     <ul class="work-list">
                         <li class="work-list-item">Participated in the reception of individuals and representatives of legal entities, drawing up drafts of deeds, certificates, other documents related to the performance of notarial acts, and statistical reports. </li>
                         <li class="work-list-item">Making entries in the register for registration of notarial acts.</li>
-                        <li class="work-list-item">Keeping records and the notary's archive. </li>
-                        <li class="work-list-item">Preparing and sending, on behalf of the notary, requests to enterprises, institutions and organizations regarding information and documents necessary for notarial actions.</li>
                     </ul>
                 </div>
                 <!--Company 2-->
@@ -84,7 +82,6 @@
                     <h5 class="period">August 2017 - May 2021   <span class="line">|</span>   Ukraine</h5>
                     <ul class="work-list">
                         <li class="work-list-item">Reception of bread baking </li>
-                        <li class="work-list-item">Cutting and packaging of bread, its dating.</li>
                         <li class="work-list-item">Shipment of bread according to the goods invoices.</li>
                     </ul>
                 </div>
@@ -93,8 +90,6 @@
                     <h4 class="work-position">Assistant notary <span class="organization">State notary office</span></h4>
                     <h5 class="period">June 2014 - January 2015  <span class="line">|</span>    Ukraine</h5>
                     <ul class="work-list">
-                        <li class="work-list-item">Participated in the reception of individuals and representatives of legal entities, drawing up drafts of deeds, certificates, other documents related to the performance of notarial acts, and statistical reports. </li>
-                        <li class="work-list-item">Making entries in the register for registration of notarial acts.</li>
                         <li class="work-list-item">Keeping records and the notary's archive.</li>
                         <li class="work-list-item">Preparing and sending, on behalf of the notary, requests to enterprises, institutions and organizations regarding information and documents necessary for notarial actions.</li>
                     </ul>
@@ -168,10 +163,10 @@
             <div class="tech-skills">
                 <h3 class="sidebar-title">Languages</h3>
                 <ul class="tech-skills-list">
-                    <li class="tech-skills-item"> <span class="tech-skills-text">Ukrainian</span></li>
-                    <li class="tech-skills-item"> <span class="tech-skills-text">German</span></li>
-                    <li class="tech-skills-item"> <span class="tech-skills-text">English</span></li>
-                    <li class="tech-skills-item"> <span class="tech-skills-text">Russian</span></li>
+                    <li class="tech-skills-item"> <span class="tech-skills-text">Ukrainian - Proficiency</span></li>
+                    <li class="tech-skills-item"> <span class="tech-skills-text">German -  Beginner, Elementary</span></li>
+                    <li class="tech-skills-item"> <span class="tech-skills-text">English - Intermediate</span></li>
+                    <li class="tech-skills-item"> <span class="tech-skills-text">Russian - Proficiency</span></li>
                 </ul>
              </div>
         </aside>         
