--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="about">
                 <h1 class="about-name">Valentyna Sira</h1>
                 <h2 class="about-position">Junior frontend developer</h2>
-                <p class="about-description"> Front-end developer with strong analytical thinking. Highly responsible, punctual, and goal- oriented person, always ready to learn and gain new experiences. 
+                <p class="about-description"> I'm an enthusiastic and detail-oriented Frontend Developer seeking an entry-level position with Company to use my skills in coding, troubleshooting complex problems, and assisting in the timely completion of projects. Thanks to the experience of working at a bread factory, I can safely work at any time of the day. Working in a notary's office taught me responsibility, attention to detail, and the ability to communicate with colleagues.
                 </p> 
             </div>
             <!--Projects-->
@@ -35,7 +35,7 @@
                             <a href="https://github.com/ValentynaSira1/goit-markup-hw-09" class="project-link">GitHub-repository</a>
                             <span class="work-list-item">[</span> HTML5, CSS3 <span class="work-list-item">]</span>
                             <br/>
-                            <span class="work-list-item">A website of WebStudio company. Responsive design, transform effects, modal windows.</span>
+                            <span class="work-list-item">A website of WebStudio company. Compiled and stylized the entire site using a responsive and adaptive layout, created a modal window.</span>
                             <br/>
                             <span class="work-list-item">Role: developer</span>
                         </span>
@@ -46,7 +46,7 @@
                             <a href="https://github.com/Boroda-Dmitro/js_ny-times-news" class="project-link">GitHub-repository</a>
                             <span class="work-list-item">[</span> HTML5, CSS3, SASS, JS <span class="work-list-item">]</span>
                             <br/>
-                            <span class="work-list-item">A website of News. Responsive calendar.</span>
+                            <span class="work-list-item">A website of News. I developed a section with a calendar. I set up the year and month switch back and forth and set the current date.</span>
                             <br/>
                             <span class="work-list-item">Role: developer</span>
                         </span>
@@ -57,7 +57,7 @@
                             <a href="https://github.com/AndrewKustov1998/mimino" class="project-link">GitHub-repository</a>
                             <span class="work-list-item">[</span> HTML5, CSS3, SASS <span class="work-list-item">]</span>
                             <br/>
-                            <span class="work-list-item">A website of Mimiho company.  Responsive marking, design, transform effects on one section, code review.</span>
+                            <span class="work-list-item">A website of Mimiho complex.  I designed and styled one of the sections on the website of the MIMIHO hotel and restaurant complex. Made adaptive news. I also review the code.</span>
                             <br/>
                             <span class="work-list-item">Role: developer</span>
                         </span>
@@ -115,7 +115,7 @@
             <img src="img/Screenshot_1.png" alt="user photo" class="photo">
             <!--Contacts-->
             <div class="contacts">
-                <h3 class="sidebar-title">Contact <br/>Information</h3>
+                <h3 class="sidebar-title">Contacts</h3>
              <div>
                     <p>
                         <a href="tel:+380989317919" class="contact-link contact-link-non">+38 098 93 17 919</a>
@@ -137,7 +137,7 @@
             </div>
             <!--Tech skills-->
             <div class="tech-skills">
-                <h3 class="sidebar-title">Languages</h3>
+                <h3 class="sidebar-title">Tech Skills</h3>
                 <ul class="tech-skills-list">
                     <li class="tech-skills-item"> <span class="tech-skills-text">HTML5, SCC3, SASS</span></li>
                     <li class="tech-skills-item"> <span class="tech-skills-text">JavaScript</span></li>
@@ -164,7 +164,7 @@
                 <h3 class="sidebar-title">Languages</h3>
                 <ul class="tech-skills-list">
                     <li class="tech-skills-item"> <span class="tech-skills-text">Ukrainian - Proficiency</span></li>
-                    <li class="tech-skills-item"> <span class="tech-skills-text">German -  Beginner, Elementary</span></li>
+                    <li class="tech-skills-item"> <span class="tech-skills-text">German - Elementary</span></li>
                     <li class="tech-skills-item"> <span class="tech-skills-text">English - Intermediate</span></li>
                     <li class="tech-skills-item"> <span class="tech-skills-text">Russian - Proficiency</span></li>
                 </ul>
