--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
         <!--Sidebar-->
         <aside class="sidebar">
-            <img src="img/Screenshot_1.png" alt="user photo" class="photo">
+            <img src="img/изображение_viber_2023-06-02_14-26-41-831.jpg" alt="user photo" class="photo">
             <!--Contacts-->
             <div class="contacts">
                 <h3 class="sidebar-title">Contacts</h3>
@@ -124,10 +124,10 @@
                         <a href="mailto:ivachenko2010@ukr.net" class="contact-link contact-link-non">ivachenko2010@ukr.net</a> 
                     </p>
                     <p>
-                        <a href="tel:+380989317919" class="contact-link">Telegram</a>
+                        <a href="tg://resolve?domain=valentyna_sira" class="contact-link">Telegram</a>
                     </p>
                     <p>
-                        <a href="https://www.linkedin.com/in/%D0%B2%D0%B0%D0%BB%D0%B5%D0%BD%D1%82%D0%B8%D0%BD%D0%B0-%D1%81%D1%96%D1%80%D0%B0-88600926a/" class="contact-link">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/valentyna_sira/" class="contact-link">LinkedIn</a>
                     </p>  
                     <p>
                         <a href="https://github.com/ValentynaSira1" class="contact-link">GitHub</a>
