--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
     <title>Resume</title>
 </head>
 <body>
-
+<header>
+    <div class="header">
+        <h1 class="about-name">Valentyna Sira</h1>
+        <h2 class="about-position">Junior frontend developer</h2>
+    </div>
+</header>
     <!--Main-->
     <div class="main">
         <!--Main content-->
         <div class="main-content">
             <!--about user-->
             <div class="about">
-                <h1 class="about-name">Valentyna Sira</h1>
-                <h2 class="about-position">Junior frontend developer</h2>
+                <h3 class="title">
+                    Summary
+                    </h3> 
                 <p class="about-description"> I'm an enthusiastic and detail-oriented Frontend Developer seeking an entry-level position with Company to use my skills in coding, troubleshooting complex problems, and assisting in the timely completion of projects. Thanks to the experience of working at a bread factory, I can safely work at any time of the day. Working in a notary's office taught me responsibility, attention to detail, and the ability to communicate with colleagues.
                 </p> 
             </div>
@@ -112,7 +118,7 @@
         </div>
         <!--Sidebar-->
         <aside class="sidebar">
-            <img src="img/изображение_viber_2023-06-02_14-26-41-831.jpg" alt="user photo" class="photo">
+            <!-- <img src="img/изображение_viber_2023-06-02_14-26-41-831.jpg" alt="user photo" class="photo"> -->
             <!--Contacts-->
             <div class="contacts">
                 <h3 class="sidebar-title">Contacts</h3>
