--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <ol class="projects-list">
                      <li class="projects-item">
                         <span class="project">
-                            <a href="https://valentynasira1.github.io/goit-markup-hw-09/" class="project-link">WebStudio</a>,
+                            <a href="https://valentynasira1.github.io/goit-markup-hw-09/" class="project-link">WebStudio</a>
                             <a href="https://github.com/ValentynaSira1/goit-markup-hw-09" class="project-link">GitHub-repository</a>
                             <span class="work-list-item">[</span> HTML5, CSS3 <span class="work-list-item">]</span>
                             <br/>
@@ -48,7 +48,7 @@
                      </li>
                      <li class="projects-item">
                         <span class="project">
-                            <a href="https://boroda-dmitro.github.io/js_ny-times-news/" class="project-link">News</a>,
+                            <a href="https://boroda-dmitro.github.io/js_ny-times-news/" class="project-link">News</a>
                             <a href="https://github.com/Boroda-Dmitro/js_ny-times-news" class="project-link">GitHub-repository</a>
                             <span class="work-list-item">[</span> HTML5, CSS3, SASS, JS <span class="work-list-item">]</span>
                             <br/>
@@ -59,7 +59,7 @@
                      </li>    
                      <li class="projects-item">
                         <span class="project">
-                            <a href="https://andrewkustov1998.github.io/mimino/" class="project-link">Mimiho</a>,
+                            <a href="https://andrewkustov1998.github.io/mimino/" class="project-link">Mimiho</a>
                             <a href="https://github.com/AndrewKustov1998/mimino" class="project-link">GitHub-repository</a>
                             <span class="work-list-item">[</span> HTML5, CSS3, SASS <span class="work-list-item">]</span>
                             <br/>
@@ -68,7 +68,19 @@
                             <span class="work-list-item">Role: developer</span>
                         </span>
                     </li>
-                </ol>
+                    <li class="projects-item">
+                        <span class="project">
+                            <a href="https://tikhonenkovv.github.io/bite-todo-react/" class="project-link">TaskPro</a>
+                            <a href="https://github.com/TikhonenkoVV/bite-todo-react" class="project-link">GitHub-repository: Frontend</a>
+                            <a href="https://github.com/TikhonenkoVV/bite-todo-rest-api" class="project-link">GitHub-repository: Backend</a>
+                            <span class="work-list-item">[</span> HTML5, CSS3, SASS, React, Redux, REST API, Node.js <span class="work-list-item">]</span>
+                            <br/>
+                            <span class="work-list-item">This is a website for job scheduling by creating tasks. I worked on the backend part. I ensured registration, authorization, change of data and avatar, deletion of user data.</span>
+                            <br/>
+                            <span class="work-list-item">Role: developer</span>
+                        </span>
+                    </li>
+                    </ol>
             </div>
             <!--Work-->
             <div>
@@ -107,7 +119,7 @@
                 <div>
                     <h4 class="university">IT School GoIT</h4>
                     <h4 class="specialization">Fullstack Developer</h4>
-                    <h5 class="period">September 2022 - June 2023   <span class="line">|</span>   Ukraine</h5>
+                    <h5 class="period">September 2022 - August 2023   <span class="line">|</span>   Ukraine</h5>
                 </div>
                 <div>
                     <h4 class="university">National Technological University</h4>
